Alterando Caminhos dos Arquivos no Index

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <title>Animais Fantasticos</title>
     <script>document.documentElement.className += ' js';</script>
     <!-- STYLES -->
-    <link rel="stylesheet" href="src/css/reset.css">
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/style.css">
 </head>
 
 <body>
@@ -154,7 +154,7 @@
         <p>Todos os direitos reservados © 2022 Zanin Dev</p>
     </footer>
 
-    <script src="src/scripts/main.js"></script>
+    <script src="./src/scripts/main.js"></script>
 </body>
 
 </html>
